Fixing nav on mobile and styling for get started button.

--- a/_sass/hubbing.scss
+++ b/_sass/hubbing.scss
@@ -6,6 +6,13 @@
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
 	border-radius: 50px;
 	border: 0;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+}
+
+.gradient-button:hover {
+	opacity: 0.8;
 }
 
 .gradient-container {
