--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,6 +1,6 @@
 .nav-open {
 	header {
-		background: #444;
+		background: white;
 		z-index: 10;
 
 		@media #{$mid-point} {
